<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="profile">Profile Image</string>
    <string name="name">Shafayat</string>
    <string name="email">shafayathossainkhan@gmail.com</string>
    <string name="item1">Inbox</string>
    <string name="item2">Starred</string>
    <string name="item3">Sent Mail</string>
    <string name="item4">Draft</string>
    <string name="item5">All Mail</string>
    <string name="item6">Trash</string>
    <string name="item7">Spam</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
</resources>
