<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/item1"
            android:id="@+id/inbox"
            android:icon="@drawable/inbox"/>

        <item
            android:title="@string/item2"
            android:id="@+id/starred"
            android:icon="@drawable/star"/>

        <item
            android:title="@string/item3"
            android:id="@+id/sent"
            android:icon="@drawable/send"/>
        <item
            android:title="@string/item4"
            android:id="@+id/draft"
            android:icon="@drawable/draft"/>

    </group>

    <item android:title="Subheader">

        <menu>
            <item android:title="@string/item5"
                android:id="@+id/allmail"
                android:icon="@drawable/allmail"/>

            <item
                android:title="@string/item6"
                android:id="@+id/trash"
                android:icon="@drawable/delete"/>

            <item
                android:title="@string/item7"
                android:id="@+id/spam"
                android:icon="@drawable/spam"/>
        </menu>

    </item>

</menu>